--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,16 @@
 			<artifactId>wicket-guice</artifactId>
 			<version>1.4-rc2</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.wicket</groupId>
+			<artifactId>wicket-auth-roles</artifactId>
+			<version>1.4-rc2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.ant</groupId>
+			<artifactId>ant-javamail</artifactId>
+			<version>1.7.1</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<resources>
