--- a/pom.xml
+++ b/pom.xml
@@ -72,9 +72,9 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>net.java.dev.activeobjects</groupId>
+			<groupId>org.mix3.activeobjects</groupId>
 			<artifactId>activeobjects</artifactId>
-			<version>0.8.2</version>
+			<version>0.8.2.0.1</version>
 		</dependency>
 		<dependency>
 			<groupId>com.h2database</groupId>
@@ -95,6 +95,11 @@
 			<groupId>org.apache.ant</groupId>
 			<artifactId>ant-javamail</artifactId>
 			<version>1.7.1</version>
+		</dependency>
+		<dependency>
+			<groupId>c3p0</groupId>
+			<artifactId>c3p0</artifactId>
+			<version>0.9.1.2</version>
 		</dependency>
 	</dependencies>
 	<build>
