--- a/pom.xml
+++ b/pom.xml
@@ -74,7 +74,7 @@
 		<dependency>
 			<groupId>net.java.dev.activeobjects</groupId>
 			<artifactId>activeobjects</artifactId>
-			<version>0.8.2</version>
+			<version>0.8.2.0.1</version>
 		</dependency>
 		<dependency>
 			<groupId>com.h2database</groupId>
@@ -85,6 +85,11 @@
 			<groupId>org.apache.wicket</groupId>
 			<artifactId>wicket-guice</artifactId>
 			<version>1.4-rc2</version>
+		</dependency>
+		<dependency>
+			<groupId>c3p0</groupId>
+			<artifactId>c3p0</artifactId>
+			<version>0.9.1.2</version>
 		</dependency>
 	</dependencies>
 	<build>
